# bigmeow_bot

./: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
src/bigmeow/: common.py  discord.py  index.py  main.py  meow.py  settings.py  slack.py  telegram.py  web.py
tests/: test_bigmeow.py
