[tool.poetry]
name = "bigmeow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
python-dotenv = "^0.20.0"
python-telegram-bot = {version = "20.0a0", allow-prereleases = true}
requests = "^2.28.0"
lxml = "^4.9.0"
cssselect = "^1.1.0"
dateparser = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
prospector = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
